test/conformance/chainsaw/mutate/clusterpolicy/standard/existing/policy-reports-for-targets/chainsaw-step-01-apply-1-1.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: test-reports
