test/conformance/chainsaw/mutate/clusterpolicy/standard/existing/policy-reports-for-targets/chainsaw-step-02-apply-1-1.yaml
apiVersion: v1
kind: ConfigMap
metadata:
  name: trigger-configmap
  namespace: test-reports
data:
  config.yaml: |
    app: test
