test/conformance/chainsaw/mutate/clusterpolicy/standard/existing/policy-reports-for-targets/chainsaw-step-03-assert-1-1.yaml
apiVersion: v1
kind: Secret
metadata:
  name: target-secret
  namespace: test-reports
  labels:
    app: mutated
    mutated-by: kyverno
